--- a/MALI KA.html
+++ b/MALI KA.html
@@ -49,7 +49,7 @@
 	</a>
 </div>
 <script>
-	window.alert("WRONG ANSWER!!! you should've asnwered truthfully");
+	window.alert("WRONG ANSWER!!! you should've answered truthfully");
 </script> 
 </body>
 </html>
